plugins {
    id 'java'
}

java {
    version '1.8'
}
compileJava.options.encoding = 'UTF-8'
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    sourceCompatibility = JavaVersion.VERSION_1_8
}

build {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
}

group 'github.com/darksoldier1404'
version = '1.0.3.127'
configurations {
    jar.archiveName = 'DP-UniversalCore-_' + name + '-' + version + '.jar'
}
repositories {
    mavenCentral()
    maven { url = 'https://oss.sonatype.org/content/repositories/central' }
    maven { url = 'https://papermc.io/repo/repository/maven-snapshots/'}
    maven {
        name "essentialsx-releases"
        url "https://repo.essentialsx.net/releases/"
    }
    maven { url "https://repo.dmulloy2.net/repository/public/" }
    maven {
        url "http://dpnw.site:8081/repository/maven-public/"
        allowInsecureProtocol = true
    }
    maven {
        url "https://org.bstats/bstats-bukkit"
    }
    maven {
        url 'https://repo.spring.io/plugins-release/'
    }
    maven {
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:20.1.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    compileOnly "com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT"
    compileOnly 'net.essentialsx:EssentialsX:2.19.0'
    compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly "org.bstats:bstats-bukkit:2.2.1"
    compileOnly 'com.darksoldier1404.dvs:DP-VirtualStorage:1.0.0.41'
    compileOnly 'me.clip:placeholderapi:2.10.10'
}

test {
    useJUnitPlatform()
}